--- a/Web/src/app/components/terminal/asset-header/asset-header.component.html
+++ b/Web/src/app/components/terminal/asset-header/asset-header.component.html
@@ -1,41 +1,41 @@
-<div fxLayout.gt-xs="row" fxLayout.lt-sm="column" fxLayoutAlign="start center">  
-    <div fxFlex="34" class="partial-header" fxLayout.gt-xs="row" fxLayout.lt-sm="column" fxLayoutAlign="space-around center" fxLayoutGap="10px">
-        <div fxLayout="row" fxLayoutAlign.gt-xs="start center" fxLayoutAlign.lt-sm="center center" *ngIf="assetTerminal"  fxLayoutGap="10px">
-            <div class="asset-icon">
-                <img [src]="getAssetImgUrl()" onerror="this.style.display='none'" onload="this.style.display='unset'"/>
-            </div>
-            <div fxLayout="column" fxLayoutAlign.gt-xs="center start" fxLayoutAlign.lt-sm="center center">
-                <div><b>{{assetTerminal.code}}</b></div>
-                <span class="truncate">{{assetTerminal.name}}</span>
-            </div>
-        </div>
-        <div fxLayout="column" fxLayoutAlign.gt-xs="start center" fxLayoutAlign.lt-sm="center center" *ngIf="assetData" fxLayoutGap="10px">
-            <div fxLayout="row" fxLayoutAlign="space-evenly center" fxLayoutGap="20px">
-                <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="5px">
-                    <span>USD</span>
-                    <span *ngIf="!assetStatus || !assetStatus.price">-</span>
-                    <span *ngIf="assetStatus && assetStatus.price">{{assetStatus.price | valueDisplay}}</span>
+<div fxLayout.gt-sm="row" fxLayout.lt-lg="column" fxLayoutAlign.gt-sm="start center" fxLayoutAlign.lt-lg="center start">  
+    <div fxLayout="row" class="width100" fxFlex.gt-sm="33" fxFlex.lt-lg="100" fxLayoutAlign="start center">  
+        <div fxFlex.gt-sm="100" fxFlex.sm="66" fxFlex.xs="100" class="partial-header" fxLayout="row" fxLayoutAlign="space-around center" fxLayoutGap="10px">
+            <div fxLayout="row" fxLayoutAlign.gt-xs="start center" fxLayoutAlign.lt-sm="center center" *ngIf="assetTerminal"  fxLayoutGap="10px">
+                <div class="asset-icon">
+                    <img [src]="getAssetImgUrl()" onerror="this.style.display='none'" onload="this.style.display='unset'"/>
                 </div>
-                <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="5px">
-                    <div *ngIf="assetStatus && assetStatus.variationPercentage24h" [class.bull]="assetStatus.variationPercentage24h > 0" [class.bear]="assetStatus.variationPercentage24h < 0">
-                        <div class="arrow" *ngIf="assetStatus.variationPercentage24h > 0">&uarr;&nbsp;</div><div class="arrow" *ngIf="assetStatus.variationPercentage24h < 0">&darr;&nbsp;</div>{{assetStatus.variationPercentage24h | number:'1.2-2'}}%
+                <div fxLayout="column" fxLayoutAlign.gt-xs="center start" fxLayoutAlign.lt-sm="center center">
+                    <div><b>{{assetTerminal.code}}</b></div>
+                    <span class="truncate">{{assetTerminal.name}}</span>
+                </div>
+            </div>
+            <div fxLayout="column" fxLayoutAlign.gt-xs="start center" fxLayoutAlign.lt-sm="center center" *ngIf="assetData" fxLayoutGap="10px">
+                <div fxLayout="row" fxLayoutAlign="space-evenly center" fxLayoutGap="20px">
+                    <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="5px">
+                        <span>USD</span>
+                        <span *ngIf="!assetStatus || !assetStatus.price">-</span>
+                        <span *ngIf="assetStatus && assetStatus.price">{{assetStatus.price | valueDisplay}}</span>
                     </div>
-                    <span *ngIf="!assetStatus || !assetStatus.variationPercentage24h">-</span>
-                    <span>24h</span>
+                    <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="5px">
+                        <div *ngIf="assetStatus && assetStatus.variationPercentage24h" [class.bull]="assetStatus.variationPercentage24h > 0" [class.bear]="assetStatus.variationPercentage24h < 0">
+                            <div class="arrow" *ngIf="assetStatus.variationPercentage24h > 0">&uarr;&nbsp;</div><div class="arrow" *ngIf="assetStatus.variationPercentage24h < 0">&darr;&nbsp;</div>{{assetStatus.variationPercentage24h | number:'1.2-2'}}%
+                        </div>
+                        <span *ngIf="!assetStatus || !assetStatus.variationPercentage24h">-</span>
+                        <span>24h</span>
+                    </div>
+                </div>
+                <div fxLayout="row" fxLayoutAlign="center center">
+                    <div *ngIf="assetData" fxLayoutAlign="center center" class="asset-recommendation" 
+                        [class.bg-neutral]="assetData.mode == 0" 
+                        [class.bg-bull]="assetData.mode == 1 || assetData.mode == 2" 
+                        [class.bg-bear]="assetData.mode == 3 || assetData.mode == 4">
+                        {{getAssetGeneralRecommendation()}}
+                    </div>
                 </div>
             </div>
-            <div fxLayout="row" fxLayoutAlign="center center">
-                <div *ngIf="assetData" fxLayoutAlign="center center" class="asset-recommendation" 
-                    [class.bg-neutral]="assetData.mode == 0" 
-                    [class.bg-bull]="assetData.mode == 1 || assetData.mode == 2" 
-                    [class.bg-bear]="assetData.mode == 3 || assetData.mode == 4">
-                    {{getAssetGeneralRecommendation()}}
-                </div>
-            </div>
-        </div>
-    </div> 
-    <div fxFlex="33" class="partial-header" fxLayout.gt-xs="row" fxLayout.lt-sm="column" fxLayoutAlign="space-around center" fxLayoutGap="10px">
-        <div fxLayout="column" fxLayoutAlign="center start" fxLayoutGap="10px">
+        </div> 
+        <div fxHide.xs="true" fxHide.gt-sm="true" fxFlex="34" class="partial-header force-border-left" fxLayout="column" fxLayoutAlign="center start" fxLayoutGap="10px">
             <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
                 <span class="status-data">Circulating Supply</span>
                 <span *ngIf="!assetStatus || !assetStatus.circulatingSupply">-</span>
@@ -52,32 +52,95 @@
                 <span *ngIf="assetStatus && assetStatus.marketCap">#{{assetStatus.marketCapRank}}&nbsp;&nbsp;{{assetStatus.marketCap | valueDisplay}}</span>
             </div>
         </div>
-        <div fxLayout="column" fxLayoutAlign="center start" fxLayoutGap="10px">
-            <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
-                <span class="status-data">Volume</span>
-                <span *ngIf="!assetStatus || !assetStatus.totalVolume">-</span>
-                <span *ngIf="assetStatus && assetStatus.totalVolume">{{assetStatus.totalVolume | valueDisplay}}</span>
+    </div>
+    <div fxLayout.gt-xs="row" class="width100" fxFlex.gt-sm="67" fxFlex.lt-lg="100" fxLayout.xs="column" fxLayoutAlign.gt-xs="start center" fxLayoutAlign.xs="center start"> 
+        <div fxLayout="row" class="width100" fxFlex.gt-xs="50" fxFlex.xs="100" fxLayoutAlign="space-around center"> 
+            <div fxHide.sm="true" fxFlex="50" class="partial-header force-border-left" fxLayout="column" fxLayoutAlign="center start" fxLayoutGap="10px">
+                <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
+                    <span class="status-data">Circulating Supply</span>
+                    <span *ngIf="!assetStatus || !assetStatus.circulatingSupply">-</span>
+                    <span *ngIf="assetStatus && assetStatus.circulatingSupply">{{assetStatus.circulatingSupply.toLocaleString(undefined, { maximumFractionDigits: 2 })}}</span>
+                </div>
+                <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
+                    <span class="status-data">Total Supply</span>
+                    <span *ngIf="!assetStatus || !assetStatus.totalSupply">-</span>
+                    <span *ngIf="assetStatus && assetStatus.totalSupply">{{assetStatus.totalSupply.toLocaleString(undefined, { maximumFractionDigits: 2 })}}</span>
+                </div>
+                <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
+                    <span class="status-data">Market Cap</span>
+                    <span *ngIf="!assetStatus || !assetStatus.marketCap">-</span>
+                    <span *ngIf="assetStatus && assetStatus.marketCap">#{{assetStatus.marketCapRank}}&nbsp;&nbsp;{{assetStatus.marketCap | valueDisplay}}</span>
+                </div>
             </div>
-            <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
-                <span class="status-data">High 24h</span>
-                <span *ngIf="!assetStatus || !assetStatus.high24h">-</span>
-                <span *ngIf="assetStatus && assetStatus.high24h">{{assetStatus.high24h | valueDisplay}}</span>
-            </div>
-            <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
-                <span class="status-data">Low 24h</span>
-                <span *ngIf="!assetStatus || !assetStatus.low24h">-</span>
-                <span *ngIf="assetStatus && assetStatus.low24h">{{assetStatus.low24h | valueDisplay}}</span>
+            <div fxFlex.gt-sm="50" fxFlex.sm="100" fxFlex.xs="50" class="partial-header" fxLayout="column" fxLayoutAlign="center start" fxLayoutGap="10px">
+                <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
+                    <span class="status-data">Volume</span>
+                    <span *ngIf="!assetStatus || !assetStatus.totalVolume">-</span>
+                    <span *ngIf="assetStatus && assetStatus.totalVolume">{{assetStatus.totalVolume | valueDisplay}}</span>
+                </div>
+                <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
+                    <span class="status-data">High 24h</span>
+                    <span *ngIf="!assetStatus || !assetStatus.high24h">-</span>
+                    <span *ngIf="assetStatus && assetStatus.high24h">{{assetStatus.high24h | valueDisplay}}</span>
+                </div>
+                <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
+                    <span class="status-data">Low 24h</span>
+                    <span *ngIf="!assetStatus || !assetStatus.low24h">-</span>
+                    <span *ngIf="assetStatus && assetStatus.low24h">{{assetStatus.low24h | valueDisplay}}</span>
+                </div>
             </div>
         </div>
-    </div>
-    <div fxFlex="33" class="partial-header recomendations" fxLayout="column" fxLayoutAlign.gt-xs="center start" fxLayoutAlign.lt-sm="center center" fxLayoutGap="20px">
-        <div fxLayout.gt-xs="row" fxLayout.lt-sm="column" fxLayoutAlign.gt-xs="start center" fxLayoutAlign.lt-sm="center center" fxLayoutGap="10px">
-            <div fxLayout="row" fxLayoutAlign.gt-xs="start center" fxLayoutGap="5px">
-                <div class="triangle-expert-recomendation"></div>
-                <span>Expert Recommendation</span>
-                <span *ngIf="assetData">({{getTotalExpertRecommendation()}})</span>
+        <div fxFlex.gt-xs="50" fxFlex.xs="100" class="partial-header force-border-left width100" fxLayout="row" fxLayoutAlign.gt-xs="start center" fxLayoutAlign.xs="start start">
+            <div fxHide.xs="true" fxLayout="column" fxLayoutAlign="center start" fxLayoutGap="10px">
+                <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
+                    <div class="triangle-expert-recomendation"></div>
+                    <span>Experts Recommendation</span>
+                    <span *ngIf="assetData">({{getTotalExpertRecommendation()}})</span>
+                </div>
+                <div class="pointer" (click)="openReportPage()" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
+                    <div class="triangle-report-rating"></div>
+                    <span>Reports Rating</span>
+                    <span *ngIf="assetData">({{getTotalReportRatings()}})</span>
+                </div>
             </div>
-            <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
+            <div fxHide.xs="true" class="recommendation-distribution" fxLayout="column" fxLayoutAlign="center start" fxLayoutGap="10px">
+                <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
+                    <div class="bull" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
+                        <span>Buy</span>
+                        <span>{{getExpertsBuyAmount()}}</span>
+                    </div>
+                    <div class="bear" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
+                        <span>Sell</span>
+                        <span>{{getExpertsSellAmount()}}</span>
+                    </div>
+                    <div class="neutral" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
+                        <span>Neutral</span>
+                        <span>{{getExpertsNeutralAmount()}}</span>
+                    </div>
+                </div>
+                <div fxLayout="row" class="pointer" (click)="openReportPage()" fxLayoutAlign="start center" fxLayoutGap="10px">
+                    <div class="bull" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
+                        <span>Buy</span>
+                        <span>{{getReportsBuyAmount()}}</span>
+                    </div>
+                    <div class="bear" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
+                        <span>Sell</span>
+                        <span>{{getReportsSellAmount()}}</span>
+                    </div>
+                    <div class="neutral" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
+                        <span>Neutral</span>
+                        <span>{{getReportsNeutralAmount()}}</span>
+                    </div>
+                </div>
+            </div>
+            <div fxHide.gt-xs="true" class="force-padding-top" fxLayout="column" fxLayoutAlign="start start">
+                <div class="triangle-expert-recomendation"></div>
+            </div>
+            <div fxHide.gt-xs="true" class="force-padding-top" fxLayout="column" fxLayoutAlign="center start" fxLayoutGap="10px">
+                <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
+                    <span>Experts Recommendation</span>
+                    <span *ngIf="assetData">({{getTotalExpertRecommendation()}})</span>
+                </div>
                 <div class="bull" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
                     <span>Buy</span>
                     <span>{{getExpertsBuyAmount()}}</span>
@@ -89,16 +152,16 @@
                 <div class="neutral" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
                     <span>Neutral</span>
                     <span>{{getExpertsNeutralAmount()}}</span>
-                </div>
+                </div>                
             </div>
-        </div>
-        <div class="pointer" (click)="openReportPage()" fxLayout.gt-xs="row" fxLayout.lt-sm="column" fxLayoutAlign.gt-xs="start center" fxLayoutAlign.lt-sm="center center" fxLayoutGap="10px">
-            <div fxLayout="row" fxLayoutAlign.gt-xs="start center" fxLayoutGap="5px">
+            <div fxHide.gt-xs="true" class="force-padding-top force-padding-left" fxLayout="column" fxLayoutAlign="start start">
                 <div class="triangle-report-rating"></div>
-                <span>Reports Rating</span>
-                <span *ngIf="assetData">({{getTotalReportRatings()}})</span>
             </div>
-            <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
+            <div fxHide.gt-xs="true" class="force-padding-top" fxLayout="column" fxLayoutAlign="center start" fxLayoutGap="10px">
+                <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
+                    <span>Reports Rating</span>
+                    <span *ngIf="assetData">({{getTotalReportRatings()}})</span>
+                </div>
                 <div class="bull" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
                     <span>Buy</span>
                     <span>{{getReportsBuyAmount()}}</span>
@@ -110,7 +173,7 @@
                 <div class="neutral" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
                     <span>Neutral</span>
                     <span>{{getReportsNeutralAmount()}}</span>
-                </div>
+                </div>               
             </div>
         </div>
     </div>
