--- a/Web/src/app/components/terminal/asset-header/asset-header.component.html
+++ b/Web/src/app/components/terminal/asset-header/asset-header.component.html
@@ -53,8 +53,11 @@
             </div>
         </div>
     </div>
-    <div fxLayout.gt-xs="row" class="width100" fxFlex.gt-sm="67" fxFlex.lt-lg="100" fxLayout.xs="column" fxLayoutAlign.gt-xs="start center" fxLayoutAlign.xs="center start"> 
-        <div fxLayout="row" class="width100" fxFlex.gt-xs="50" fxFlex.xs="100" fxLayoutAlign="space-around center"> 
+    <div fxHide.gt-xs="true" *ngIf="!expanded" (click)="expand()" fxLayout="row" class="collapse-div pointer width100" fxLayoutAlign="center center">
+        <mat-icon>arrow_drop_down</mat-icon>
+    </div>
+    <div fxLayout.gt-xs="row" *ngIf="expanded" class="width100" fxFlex.gt-sm="67" fxFlex.lt-lg="100" fxLayout.xs="column" fxLayoutAlign.gt-xs="start center" fxLayoutAlign.xs="center start"> 
+        <div fxLayout="row" class="width100" fxFlex.gt-sm="50" fxFlex.sm="34" fxFlex.xs="100" fxLayoutAlign="space-around center"> 
             <div fxHide.sm="true" fxFlex="50" class="partial-header force-border-left" fxLayout="column" fxLayoutAlign="center start" fxLayoutGap="10px">
                 <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
                     <span class="status-data">Circulating Supply</span>
@@ -90,7 +93,7 @@
                 </div>
             </div>
         </div>
-        <div fxFlex.gt-xs="50" fxFlex.xs="100" class="partial-header force-border-left width100" fxLayout="row" fxLayoutAlign.gt-xs="start center" fxLayoutAlign.xs="start start">
+        <div fxFlex.gt-sm="50" fxFlex.sm="66" fxFlex.xs="100" class="partial-header force-border-left width100" fxLayout="row" fxLayoutAlign.gt-xs="start center" fxLayoutAlign.xs="start start">
             <div fxHide.xs="true" fxLayout="column" fxLayoutAlign="center start" fxLayoutGap="10px">
                 <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
                     <div class="triangle-expert-recomendation"></div>
@@ -176,5 +179,8 @@
                 </div>               
             </div>
         </div>
+    </div>
+    <div fxHide.gt-xs="true" *ngIf="expanded" (click)="collapse()" fxLayout="row" class="collapse-div pointer width100" fxLayoutAlign="center center">
+        <mat-icon>arrow_drop_up</mat-icon>
     </div>
 </div>
