--- a/Web/src/app/components/terminal/ratings-list/ratings-list.component.css
+++ b/Web/src/app/components/terminal/ratings-list/ratings-list.component.css
@@ -9,3 +9,18 @@
 td.mat-column-expert{
     cursor: pointer;
 }
+
+.expert-rating{
+    justify-content: unset;
+    margin: 4px 0;
+}
+
+@media(max-width:599px){
+    td.mat-cell:first-child, td.mat-footer-cell:first-child, th.mat-header-cell:first-child {
+        padding-left: 10px;
+    }
+
+    td.mat-cell:last-child, td.mat-footer-cell:last-child, th.mat-header-cell:last-child {
+        padding-right: 10px;
+    }
+}
