--- a/Web/src/app/components/terminal/ratings-list/ratings-list.component.html
+++ b/Web/src/app/components/terminal/ratings-list/ratings-list.component.html
@@ -10,24 +10,34 @@
   </ng-container>
   <ng-container matColumnDef="recommendation">
     <th mat-header-cell *matHeaderCellDef> Recommendation </th>
-    <td mat-cell *matCellDef="let element"> <span [style.color]="getAdviceTypeColor(element.adviceType)">{{getRecommendation(element)}}</span> </td>
+    <td mat-cell *matCellDef="let element"> 
+      <div [style.color]="getAdviceTypeColor(element.adviceType)">{{getRecommendation(element)}}</div> 
+      <div fxHide.gt-xs *ngIf="element.targetPrice">Target: {{element.targetPrice | valueDisplay}}</div>
+      <div fxHide.gt-xs *ngIf="element.stopLoss">Stop Loss: {{element.stopLoss | valueDisplay}}</div>
+      
+    </td>
   </ng-container>
   <ng-container matColumnDef="target">
-    <th mat-header-cell *matHeaderCellDef> Target </th>
-    <td mat-cell *matCellDef="let element"> {{element.targetPrice | valueDisplay}}</td>
+    <th mat-header-cell *matHeaderCellDef> <span fxHide.lt-sm> Target </span> </th>
+    <td mat-cell *matCellDef="let element"> <span fxHide.lt-sm> {{element.targetPrice | valueDisplay}} </span></td>
   </ng-container>
   <ng-container matColumnDef="stopLoss">
-    <th mat-header-cell *matHeaderCellDef> Stop Loss </th>
-    <td mat-cell *matCellDef="let element"> {{element.stopLoss | valueDisplay}}</td>
+    <th mat-header-cell *matHeaderCellDef> <span fxHide.lt-sm>Stop Loss</span> </th>
+    <td mat-cell *matCellDef="let element"> <span fxHide.lt-sm> {{element.stopLoss | valueDisplay}} </span></td>
   </ng-container>
   <ng-container matColumnDef="expert">
     <th mat-header-cell *matHeaderCellDef> Expert </th>
-    <td mat-cell *matCellDef="let element"><a [href]="getExpertDetailsUrl(element)" target="_blank"> {{element.expertName}} </a></td>
+    <td mat-cell *matCellDef="let element">
+      <a [href]="getExpertDetailsUrl(element)" target="_blank"> {{element.expertName}} </a>
+      <div fxHide.gt-xs class="expert-rating">
+        <bar-rating [theme]="'fontawesome-o'" [readOnly]="'true'" [rate]="element.expertRating" [title]="element.expertRating | number: '1.2-2'"></bar-rating>
+      </div>
+    </td>
   </ng-container>
   <ng-container matColumnDef="rating">
-    <th mat-header-cell *matHeaderCellDef> Rating </th>
+    <th mat-header-cell *matHeaderCellDef><span fxHide.lt-sm> Rating </span></th>
     <td mat-cell *matCellDef="let element"> 
-      <div class="expert-rating">
+      <div class="expert-rating" fxHide.lt-sm>
         <bar-rating [theme]="'fontawesome-o'" [readOnly]="'true'" [rate]="element.expertRating" [title]="element.expertRating | number: '1.2-2'"></bar-rating>
       </div>
     </td>
