--- a/Web/src/app/components/terminal/news-list/news-list.component.html
+++ b/Web/src/app/components/terminal/news-list/news-list.component.html
@@ -7,7 +7,7 @@
 (scrolled)="onScroll()">
 <table class="box-table" mat-table [dataSource]="news">
   <ng-container matColumnDef="date">
-    <th mat-header-cell *matHeaderCellDef> Date </th>
+    <th mat-header-cell *matHeaderCellDef> Time </th>
     <td mat-cell *matCellDef="let element" [title]="element.externalCreationDate | date:'medium'"> {{getNewsTime(element.externalCreationDate)}} </td>
   </ng-container>
   <ng-container matColumnDef="source">
