Become expert and new recommendation button

--- a/Web/src/app/components/terminal/ratings-list/ratings-list.component.css
+++ b/Web/src/app/components/terminal/ratings-list/ratings-list.component.css
@@ -24,3 +24,11 @@ td.mat-column-expert{
         padding-right: 10px;
     }
 }
+
+.recommendation-btn{
+    width: 140px;
+}
+
+.become-btn{
+    width: 100px;
+}
