--- a/Web/src/app/components/asset/asset-details/expert-ratings-tab/expert-ratings-tab.component.html
+++ b/Web/src/app/components/asset/asset-details/expert-ratings-tab/expert-ratings-tab.component.html
@@ -22,7 +22,7 @@
       <ng-container matColumnDef="rankin">
         <th mat-header-cell *matHeaderCellDef><span fxHide.lt-md> Ranking </span></th>
         <td mat-cell *matCellDef="let assetAdvisor"> 
-          <div fxHide.lt-md class="expert-rating">
+          <div fxHide.lt-md class="expert-rating" fxLayoutAlign="center center">
             <bar-rating [theme]="'fontawesome-o'" [readOnly]="'true'" [rate]="getAdvisor(assetAdvisor.userId).rating" [title]="getAdvisor(assetAdvisor.userId).rating | number: '1.2-2'"></bar-rating>
           </div>
         </td>
