--- a/Web/src/app/components/advisor/expert-details/expert-details.component.css
+++ b/Web/src/app/components/advisor/expert-details/expert-details.component.css
@@ -163,3 +163,11 @@
 .advice-data-div {
     min-width: 115px;
 }
+
+.close-link {
+    font-size: 12px;
+    color: #ffffff;
+    font-weight: 600;
+    cursor: pointer;
+    text-decoration: underline;
+}
