update on angular core, angular material and adjustments for angular universal

--- a/Web/src/app/components/admin/dashboard/dashboard.component.html
+++ b/Web/src/app/components/admin/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="dashboard-body">
-    <section id="header">
+    <!-- <section id="header">
         <div fxLayout="column" fxLayoutAlign="start center" fxLayoutGap="5px">
             <div fxLayout="row" fxLayoutAlign="space-around center" fxLayoutGap="70px" fxLayoutGap.xs="20px" fxLayoutGap.sm="35px">
                 <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="5px">
@@ -143,5 +143,5 @@
             </div>
             <div [chart]="followingChart" fxFlex="50" fxFlex.xs="100" fxFlex.sm="100"></div>
         </div>
-    </section>
+    </section> -->
 </div>
