adjusments to deploy

--- a/Web/src/app/components/account/change-password/change-password.component.html
+++ b/Web/src/app/components/account/change-password/change-password.component.html
@@ -6,5 +6,5 @@
     [value]="changePasswordRequest.currentPassword" (onChange)="changePasswordRequest.currentPassword = $event"></inheritance-input>
   <inheritance-input #NewPassword [options]="getNewPasswordOptions()" class="input-modal" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web"
     [value]="changePasswordRequest.newPassword" (onChange)="changePasswordRequest.newPassword = $event"></inheritance-input>
-  <button class="btn-save btn-modal" ngClass.xs="btn-modal-mobile" ngClass.sm="btn-modal-tablet" ngClass.gt-sm="btn-modal-web" mat-flat-button (click)="send()" [promiseBtn]="promise">Send</button>
+  <button class="btn-save btn-modal mat-primary" ngClass.xs="btn-modal-mobile" ngClass.sm="btn-modal-tablet" ngClass.gt-sm="btn-modal-web" mat-flat-button (click)="send()" [promiseBtn]="promise">Send</button>
 </div>
