--- a/Web/src/app/components/account/confirm-email/confirm-email.component.html
+++ b/Web/src/app/components/account/confirm-email/confirm-email.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="!confirmationCode" fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="25px">
   <p>Please click on the button to resend the confirmation email to {{loggedUserEmail}}.</p>
-  <button class="btn-modal" ngClass.xs="btn-modal-mobile" ngClass.sm="btn-modal-tablet" ngClass.gt-sm="btn-modal-web" mat-flat-button (click)="resendEmailConfirmation()" [promiseBtn]="promise">Resend Email</button>
+  <button class="btn-modal mat-primary" ngClass.xs="btn-modal-mobile" ngClass.sm="btn-modal-tablet" ngClass.gt-sm="btn-modal-web" mat-flat-button (click)="resendEmailConfirmation()" [promiseBtn]="promise">Resend Email</button>
 </div>
 <div *ngIf="confirmationCode" fxLayout="column" fxLayoutAlign="space-evenly center">
   <p>Your email is being confirmed and you will be redirected</p>
