--- a/Web/src/app/components/account/forgot-password/forgot-password.component.html
+++ b/Web/src/app/components/account/forgot-password/forgot-password.component.html
@@ -5,7 +5,7 @@
 </div>
 <div fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="15px">
   <recaptcha #RecaptchaComponent (onCaptchaResponse)="onCaptchaResponse($event)"></recaptcha>
-  <button class="btn-modal" ngClass.xs="btn-modal-mobile" ngClass.sm="btn-modal-tablet" ngClass.gt-sm="btn-modal-web" mat-flat-button (click)="send()" [promiseBtn]="promise">Send</button>
+  <button class="btn-modal mat-primary" ngClass.xs="btn-modal-mobile" ngClass.sm="btn-modal-tablet" ngClass.gt-sm="btn-modal-web" mat-flat-button (click)="send()" [promiseBtn]="promise">Send</button>
 </div>
 <div class="link-div links-container" fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="10px">
   <div>
