Redirect to complete the registration

--- a/Web/src/app/components/account/configuration/configuration.component.html
+++ b/Web/src/app/components/account/configuration/configuration.component.html
@@ -1,7 +1,7 @@
-<div fxLayout="column" fxLayoutAlign="space-evenly center">
+<!-- <div fxLayout="column" fxLayoutAlign="space-evenly center">
     <inheritance-input #Wallet [options]="getWalletOptions()" [value]="wallet" class="input-modal"></inheritance-input>
     <a class="modal-link" (click)="setNewWallet()">Set a new wallet</a>
-</div>
+</div> -->
 <div class="div-separation" fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="15px">
     <p class="subtitle">Receive an email notification when a new recommendation is sent by some expert or asset that you are following.</p>
     <mat-checkbox required [(ngModel)]="configurationRequest.allowNotifications">Allow notifications</mat-checkbox>
