Confirm advice buttons

--- a/Web/src/app/components/advisor/new-advice/confirm-advice-dialog/confirm-advice-dialog.component.html
+++ b/Web/src/app/components/advisor/new-advice/confirm-advice-dialog/confirm-advice-dialog.component.html
@@ -10,6 +10,6 @@
   </mat-dialog-content>
   <mat-dialog-actions class="btn-actions" fxLayoutGap="20px">
     <button fxFlex mat-stroked-button [mat-dialog-close]="false" mat-dialog-close>Cancel</button>
-    <button fxFlex mat-flat-button [mat-dialog-close]="true">Confirm</button>
+    <button class="mat-primary" fxFlex mat-flat-button [mat-dialog-close]="true">Confirm</button>
   </mat-dialog-actions>
 </div>
